# PocketAgent

./: .env.example  .gitignore  README.md  WALKTHROUGH_SUPERVISOR.md  exceptions.py  logging_config.py  main.py  mcp.json.example  memory.py  nodes.py  pyproject.toml  rules_engine.py  test_rules.py  utils.py
.claude/: settings.local.json
docs/: BEHAVIOR_RULES_DEVELOPMENT.md  BEHAVIOR_RULES_WALKTHROUGH.md  IMPROVEMENT_PLAN.md  LOGGING_WALKTHROUGH.md  MCP_UNICODE_FIX_WALKTHROUGH.md  MULTI_MODEL_OPTIMIZATION_WALKTHROUGH.md  NODES_REFACTORING_WALKTHROUGH.md  RULES_DRAFT_TESTING.md  RULES_DRAFT_WALKTHROUGH.md  RULES_INJECTION_FIX_WALKTHROUGH.md  STEP_LIMIT_FIX_WALKTHROUGH.md  TDD_CODE_IMPROVEMENT_WALKTHROUGH.md  THREE_FILE_STRATEGY_OPTIMIZATION_WALKTHROUGH.md  TOOL_PROMPT_OPTIMIZATION_WALKTHROUGH.md
mcp_client/: __init__.py  manager.py
nodes/: __init__.py  answer_node.py  base.py  decide_node.py  embed_node.py  input_node.py  planning_node.py  planning_utils.py  prompts.py  retrieve_node.py  supervisor_node.py  think_node.py  tool_node.py
rules/: README.md  global.md
sandbox/: .gitkeep
templates/: findings.md  progress.md  task_plan.md
tests/: conftest.py  test_critical_fixes.py  test_exceptions.py  test_memory.py  test_utils.py
tests/test_mcp_client/: __init__.py
tests/test_nodes/: __init__.py  test_imports.py
